--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "eslint": "^1.9.0",
+    "eslint-plugin-react": "^3.8.0"
   }
 }
