--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0-rc3",
+    "react-sticky": "^3.0.0",
     "resolve-url-loader": "^1.3.0",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
